Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2831436 by borisson_, drunken monkey: Added dependency information to
  display plugins.
- #2836994 by dermario: Fixed order of facets in DB backend unreliable.
- #2839445 by borisson_: Fixed test failure in for some Core versions.
- #2833229 by timcosgrove: Removed array type hinting for batch contexts.
- #2656052 by drunken monkey: Removed the "plugin_id"/"settings" sub-level of
  index plugin settings.
- #2837099 by drunken monkey: Fixed the tests in latest Drupal 8.3 dev version.
- #2709351 by drunken monkey: Fixed invalid processor configurations when field
  configuration changes.
- #2829351 by SchnWalter, drunken monkey, borisson_: Fixed
  $entity->search_api_skip_tracking for nodes.
- #2827961 by drunken monkey, Steven Jones: Fixed problems with giant scores in
  DB backend.
- #2823985 by felribeiro, dermario, borisson_: Added an integration test for
  the "Role filter" processor.
- #2832015 by mkalkbrenner: Removed translations from functional tests.
- #2828184 by ekes: Fixed bug in Stemmer config form validation.
- #2828848 by mkalkbrenner, drunken monkey, borisson_: Prepared IntegrationTest
  to be executed with different backends.
- #2828148 by ekes, borisson_, drunken monkey: Fixed problem when stemming
  multiple words at once.
- #2826822 by drunken monkey: Fixed use of illegal typed data type "text".
- #2826308 by drunken monkey, mkalkbrenner: Fixed unwanted filter in Views
  tests.
- #2734897 by niko-, drunken monkey: Added tests for preIndexSave()
  implementations.
- #2650364 by drunken monkey: Added a "skip access checks" option to the Views
  relationship plugin.
- #2826160 by keboca, drunken monkey: Fixed config form of "Role filter"
  processor to be more robust.
- #2753815 by niko-, drunken monkey, itsekhmistro, borisson_: Ported Simpletest
  web tests to BrowserTestBase tests.
- #2358065 by tstoeckler: Added the option for highlighting of partial matches