@@ -1,0 +1,17 @@
+id: entity_test_mulrev_changed.article.body
+status: true
+langcode: en
+field_name: body
+entity_type: entity_test_mulrev_changed
+bundle: entity_test_mulrev_changed
+label: Body
+description: ''
+required: false
+default_value: {  }
+default_value_callback: ''
+settings:
+  display_summary: true
+dependencies:
+  config:
+    - field.storage.entity_test_mulrev_changed.body
+field_type: text_with_summary
