@@ -1,0 +1,16 @@
+id: entity_test_mulrev_changed.article.keywords
+status: true
+langcode: en
+field_name: keywords
+entity_type: entity_test_mulrev_changed
+bundle: entity_test_mulrev_changed
+label: Keywords
+description: ''
+required: false
+default_value: {  }
+default_value_callback: ''
+settings: {  }
+dependencies:
+  config:
+    - field.storage.entity_test_mulrev_changed.keywords
+field_type: string
