@@ -1,0 +1,20 @@
+id: entity_test_mulrev_changed.article.width
+status: true
+langcode: en
+field_name: width
+entity_type: entity_test_mulrev_changed
+bundle: entity_test_mulrev_changed
+label: Width
+description: ''
+required: false
+default_value: {  }
+default_value_callback: ''
+settings:
+  min: !!float 0
+  max: null
+  prefix: ''
+  suffix: ''
+dependencies:
+  config:
+    - field.storage.entity_test_mulrev_changed.width
+field_type: float
